--- a/lib/Web/HTML/Dumper.pod
+++ b/lib/Web/HTML/Dumper.pod
@@ -1,16 +1,16 @@
 =head1 NAME
 
-Whatpm::HTML::Dumper - Dump DOM tree by the parser test format
+Web::HTML::Dumper - Dump DOM tree by the parser test format
 
 =head1 SYNOPSIS
 
-  use Whatpm::HTML::Dumper qw(dumptree);
+  use Web::HTML::Dumper qw(dumptree);
   
   warn dumptree $doc;
 
 =head1 DESCRIPTION
 
-The C<Whatpm::HTML::Dumper> exports a function, C<dumptree>, which
+The C<Web::HTML::Dumper> exports a function, C<dumptree>, which
 serializes the given document into the format used in HTML parser
 tests.
 
@@ -95,14 +95,14 @@ original format, attributes in the HTML namespace are serialized with
 this namespace designator.
 
 An application can define a custom namespace designator by setting the
-key-value pair to the C<%$Whatpm::HTML::Dumper::NamespaceMapping>
+key-value pair to the C<%$Web::HTML::Dumper::NamespaceMapping>
 hash:
 
-  $Whatpm::HTML::Dumper::NamespaceMapping->{$url} = $prefix;
+  $Web::HTML::Dumper::NamespaceMapping->{$url} = $prefix;
 
 For example, if the application does:
 
-  $Whatpm::HTML::Dumper::NamespaceMapping
+  $Web::HTML::Dumper::NamespaceMapping
       ->{q<urn:x-suika-fam-cx:markup:suikawiki:0:9:>}
       = 'sw';
 
