--- a/lib/Web/HTML/InputStream.pod
+++ b/lib/Web/HTML/InputStream.pod
@@ -1,19 +1,19 @@
 =head1 NAME
 
-Whatpm::HTML::InputStream - Input stream integration for HTML/XML parsers
+Web::HTML::InputStream - Input stream integration for HTML/XML parsers
 
 =head1 DESCRIPTION
 
-The C<Whatpm::HTML::InputStream> module implements handling of input
+The C<Web::HTML::InputStream> module implements handling of input
 stream for HTML/XML parsers (tokenizers), including the coordination
 with character encoding layer.  This module is not intended to be used
 standalone.
 
 =head1 SEE ALSO
 
-L<Whatpm::HTML::Parser>, L<Whatpm::XML::Parser>.
+L<Web::HTML::Parser>, L<Web::XML::Parser>.
 
-L<Whatpm::HTML::Tokenizer>.
+L<Web::HTML::Tokenizer>.
 
 =head1 SPECIFICATIONS
 
