--- a/lib/Web/HTML/Tokenizer.pod
+++ b/lib/Web/HTML/Tokenizer.pod
@@ -1,15 +1,15 @@
 =head1 NAME
 
-Whatpm::HTML::Tokenizer - An HTML and XML tokenizer
+Web::HTML::Tokenizer - An HTML and XML tokenizer
 
 =head1 DESCRIPTION
 
-The C<Whatpm::HTML::Tokenizer> module provides an implementation of
+The C<Web::HTML::Tokenizer> module provides an implementation of
 HTML and XML tokenizer.  Unlike its name, this module can be used for
 XML documents as well as HTML.  It is not intended to be used directly
 from general-purpose applications; instead it is used as part of HTML
-or XML parser, such as L<Whatpm::HTML::Parser> and
-L<Whatpm::XML::Parser>.
+or XML parser, such as L<Web::HTML::Parser> and
+L<Web::XML::Parser>.
 
 The module is intended to be a conforming HTML tokenizer according to
 Web Applications 1.0 specification (though it is meaningless to
@@ -21,9 +21,9 @@ later HTML5 development.
 
 =head1 SEE ALSO
 
-L<Whatpm::HTML::Parser>, L<Whatpm::XML::Parser>.
+L<Web::HTML::Parser>, L<Web::XML::Parser>.
 
-L<Whatpm::HTML::InputStream>.
+L<Web::HTML::InputStream>.
 
 =head1 SPECIFICATIONS
 
