--- a/lib/Web/HTML/Serializer.pod
+++ b/lib/Web/HTML/Serializer.pod
@@ -7,22 +7,20 @@ Web::HTML::Serializer - HTML DOM Serializer
   require Web::HTML::Serializer;
   
   ## Serialize an HTML document
-  my $html = Web::HTML::Serializer->get_inner_html ($doc);
-      ## NOTE: $html = $doc->inner_html is preferred.
+  my $htmlref = Web::HTML::Serializer->get_inner_html ($doc);
   
   ## Serialize an HTML element
-  my $html = Web::HTML::Serializer->get_inner_html ($el);
-      ## NOTE: $html = $el->inner_html is preferred.
+  my $htmlref = Web::HTML::Serializer->get_inner_html ($el);
   
   ## Serialize an HTML document fragment
-  my $html = Web::HTML::Serializer->get_inner_html ($df);
+  my $htmlref = Web::HTML::Serializer->get_inner_html ($df);
 
 =head1 DESCRIPTION
 
 The C<Web::HTML::Serializer> module provides a function that
-implements the fragment serialization algorithm of HTML5.  It can
-be used to serialize a HTML C<Document> or C<Element> node into
-an HTML document or fragment.
+implements the fragment serialization algorithm of HTML5.  It can be
+used to serialize an HTML C<Document>, C<Element>, or
+C<DocumentFragment> node into an HTML document or fragment.
 
 Note that the algorithm cannot be used to serialize an arbitrary 
 DOM tree; an attempt to serialize a DOM that cannot be represented
@@ -48,67 +46,64 @@ algorithm will generate an invalid HTML fragment:
 ... without raising any error or warning.  This is a limitation of
 the HTML serialization format and the fragment serialization algorithm.
 
-B<NOTE>: Usually you don't have to call this module directly,
-since L<Message::DOM::Document> and L<Message::DOM::Element>
-modules implement the C<inner_html> attribute for
-DOM C<Document> and C<Element> nodes.
+B<NOTE>: Usually you don't have to call this module directly, since
+L<Web::DOM::Document> and L<Web::DOM::Element> modules implement the
+C<inner_html> attribute for DOM C<Document> and C<Element> nodes.
 
 =head1 METHODS
 
 =over 4
 
-=item I<$html> = Web::HTML::Serializer->get_inner_html (I<$node>, [I<$onerror>])
+=item $serializer = Web::HTML::Serializer->new
 
-Serialize a node by the HTML fragment serialization algorithm.
+Return a new instance of the serializer.
+
+=item $serializer->onerror ($onerror)
+
+Set the error handler.  It must be a reference to C<CODE>, which will
+be invoked when an error occurs.  If the algorithm is required to
+raise an C<InvalidStateError> exception, i.e. if the algorithm is
+faced to a C<Node> whose type is different from any of ones supported
+by the algorithm, the C<CODE> is invoked with that C<Node> as an
+argument.  It is expected for the C<CODE> to raise an exception.  If
+no exception is raised, the C<Node> is ignored for the purpose of the
+algorithm.
+
+If no error handler is explicitly specified, an empty C<CODE> is used
+as default (i.e. do nothing).
+
+=item SCALARREF = $serializer->get_inner_html ($node)
+
+Serialize the specified node using the HTML fragment serialization
+algorithm.  The result is returned as a reference to the character
+string.
+
+=back
+
+=head1 SPECIFICATION
 
 =over 4
 
-=item I<$node>
+=item HTML
 
-The node to serialize.  The node must be a DOM C<Document>,
-C<DocumentFragment>, or C<Element> node.
-
-=item I<$onerror>
-
-A reference to C<CODE>, which will be invoked when an error occurs.
-If the algorithm is required to raise an C<INVALID_STATE_ERR> error,
-i.e. if the algorithm is faced to a C<Node> whose type is different
-from any of ones supported by the algorithm, the C<CODE> is
-invoked with that C<Node> as an argument.  It is expected for the
-C<CODE> to raise an exception.  If no exception is raised,
-the C<Node> is ignored for the purpose of the algorithm.
-
-If I<$onerror> is omitted, an empty C<CODE> (which does nothing)
-is assumed.
-
-=item I<$html>
-
-A C<SCALAR> reference to the result of the HTML fragment serialization 
-algorithm.
-
-=back
+HTML Standard
+<http://www.whatwg.org/specs/web-apps/current-work/complete.html#html-fragment-serialization-algorithm>.
 
 =back
 
 =head1 SEE ALSO
 
-Web <http://suika.fam.cx/www/markup/html/whatpm/readme>.
+L<Web::XML::Serializer>.
 
-Web Applications 1.0 - HTML fragment serialization algorithm
-<http://www.whatwg.org/specs/web-apps/current-work/complete.html#html-fragment-serialization-algorithm>.
-
-Modules L<Message::DOM::Document> and L<Message::DOM::Element> of
-manakai are implementing the C<inner_html> attribute using the
-L<Whatpm::HTML::Serializer> module, from which the
-C<Web::HTML::Serializer> module derived.
+L<Web::DOM::RootNode>.
 
 =head1 AUTHOR
 
-Wakaba <w@suika.fam.cx>.
+Wakaba <wakaba@suikawiki.org>.
 
 =head1 LICENSE
 
-Copyright 2007-2011 Wakaba <w@suika.fam.cx>.
+Copyright 2007-2013 Wakaba <wakaba@suikawiki.org>.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
