Implemented node functions

--- a/README.pod
+++ b/README.pod
@@ -45,13 +45,14 @@ submodule of the Git repository.  The L<Web::RDF::XML::Parser> module
 has more submodule dependency (see its documentation for details).
 
 In addition, a DOM implementation is required as input (and output) to
-these modules, although there is no direct dependency.  The DOM
-implementation must support a subset of features defined in DOM
-Standard, DOM Parsing and Serialization Standard, DOM3 Core, DOM
-Document Type Definitions, DOM Perl Binding, and manakai's DOM
-Extensions, to the extent implemented by the "NanoDOM" module
-(C<t_deps/lib/NanoDOM.pm>).  An example of such a DOM implementation
-is contained in the perl-web-dom package
+these modules, although there is no direct dependency.  For the XPath
+modules, see L<Web::XPath::Evaluation> for its requirements on the DOM
+implementation.  For other modules, the DOM implementation must
+support a subset of features defined in DOM Standard, DOM Parsing and
+Serialization Standard, DOM3 Core, DOM Document Type Definitions, DOM
+Perl Binding, and manakai's DOM Extensions, to the extent implemented
+by the "NanoDOM" module (C<t_deps/lib/NanoDOM.pm>).  An example of
+such a DOM implementation is contained in the perl-web-dom package
 <https://github.com/manakai/perl-web-dom>.
 
 =head1 SEE ALSO
